--- a/index.html
+++ b/index.html
@@ -6,18 +6,62 @@
   <link rel="stylesheet" href="./ae-css/8213.css">
   <link rel="stylesheet" href="./ae-css/styles-l.css">
   <link rel="stylesheet" href="./dest/css/styles.css">
-  <link rel="stylesheet" href="./slick/slick.css"/>
-  <!-- <link rel="stylesheet" href="./slick/slick-theme.css"/> -->
+  <!-- <link rel="stylesheet" href="./slick/slick.css"/>
+  <link rel="stylesheet" href="./slick/slick-theme.css"/> -->
 </head>
 <body>
   <div class="content-wrapper">
-
-
+    <section class="scm">
+      <div class="info">
+        <h1>Super Collagen Mist</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, ut labore et dolore magna aliqua.</p>
+      </div>
+      <div>
+        <img src="./images/scm_top.png" alt="">
+      </div>
+    </section>
+    <section class="story">
+      <img src="./images/scm_pencil.png" alt="">
+      <div class="placard">
+        <h3>Story</h3>
+        <p>Laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <img src="./images/scm_beaker.png" alt="">
+    </section>
+    <section class="molecules">
+      <div class="drops">
+        <img src="./images/scm_molecules.png" alt="">
+      </div>
+      <div class="chemical">
+        <h2>Dipeptide-8</h2>
+        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="chemical">
+        <h2>Trehalse</h2>
+        <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="chemical">
+        <h2>Glycerin</h2>
+        <p>Excepteur sint occaecat cupidatat non proident.</p>
+      </div>
+      <div class="dropper">
+        <img src="./images/scm_dropper.png" alt="">
+      </div>
+    </section>
+    <section class="products">
+      <div class="info">
+        <h3>Add a boost of collagen</h3>
+        <p>Ut enim ad minim veniam quis nostrud.</p>
+      </div>
+      <div class="products-img">
+        <img src="./images/scm_bottom.png" alt="">
+      </div>
+    </section>
   </div> <!-- content wrapper -->
 
-  <script type="text/javascript" src="./lib/jquery-3.3.1.min.js"></script>
+  <!-- <script type="text/javascript" src="./lib/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="./lib/jquery-migrate-3.0.1.js"></script>
   <script type="text/javascript" src="./slick/slick.min.js"></script>
-  <script type="text/javascript" src="./src/js/olive-slick.js"></script>
+  <script type="text/javascript" src="./src/js/scm-slick.js"></script> -->
 </body>
 </html>
