begin construction with FPO images

--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
   <div class="content-wrapper">
     <section class="scm">
       <div class="info">
+        <img src="./images/introducing.svg" alt="">
         <h1>Super Collagen Mist</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, ut labore et dolore magna aliqua.</p>
+        <button>Add to bag</button>
       </div>
       <div>
-        <img src="./images/scm_top.png" alt="">
+        <img src="./images/molecule-pattern.svg" alt="">
       </div>
     </section>
     <section class="story">
-      <img src="./images/scm_pencil.png" alt="">
+      <img src="./images/scm-beakers-l.png" alt="">
       <div class="placard">
         <h3>Story</h3>
         <p>Laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <img src="./images/scm_beaker.png" alt="">
+      <img src="./images/scm-beaker-r.png" alt="">
+      <img src="./images/scm-microscope.png" alt="">
     </section>
     <section class="molecules">
       <div class="drops">
-        <img src="./images/scm_molecules.png" alt="">
+        <img src="./images/scm-molecules.png" alt="">
       </div>
       <div class="chemical">
         <h2>Dipeptide-8</h2>
@@ -44,17 +47,23 @@
         <h2>Glycerin</h2>
         <p>Excepteur sint occaecat cupidatat non proident.</p>
       </div>
-      <div class="dropper">
-        <img src="./images/scm_dropper.png" alt="">
+    </section>
+    <section class="video-carousel">
+      <div class="video">
+        <h4>Video</h4>
+      </div>
+      <div class="carousel">
+        <h4>Carousel</h4>
       </div>
     </section>
     <section class="products">
       <div class="info">
         <h3>Add a boost of collagen</h3>
         <p>Ut enim ad minim veniam quis nostrud.</p>
+        <button>Shop</button>
       </div>
       <div class="products-img">
-        <img src="./images/scm_bottom.png" alt="">
+        <img src="./images/scm-products.png" alt="">
       </div>
     </section>
   </div> <!-- content wrapper -->
