--- a/index.html
+++ b/index.html
@@ -6,51 +6,70 @@
   <link rel="stylesheet" href="./ae-css/8213.css">
   <link rel="stylesheet" href="./ae-css/styles-l.css">
   <link rel="stylesheet" href="./dest/css/styles.css">
-  <!-- <link rel="stylesheet" href="./slick/slick.css"/>
-  <link rel="stylesheet" href="./slick/slick-theme.css"/> -->
+  <link rel="stylesheet" href="./slick/slick.css"/>
+  <!-- <link rel="stylesheet" href="./slick/slick-theme.css"/> -->
 </head>
 <body>
   <div class="content-wrapper">
     <section class="scm">
-      <div class="info">
-        <img src="./images/introducing.svg" alt="">
-        <h1>Super Collagen Mist</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, ut labore et dolore magna aliqua.</p>
-        <button>Add to bag</button>
+      <div class="hero">
+        <img src="./images/super-collagen-mist.jpg" alt="">
       </div>
-      <div>
+      <div class="info">
+        <h1>Super Collagen Mist</h1>
+        <p>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your makeup with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</p>
+        <button>Shop Now</button>
+      </div>
+      <div class="moleculePattern">
         <img src="./images/molecule-pattern.svg" alt="">
       </div>
     </section>
     <section class="story">
       <img src="./images/scm-beakers-l.png" alt="">
       <div class="placard">
-        <h3>Story</h3>
-        <p>Laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3>Dipeptide-8</h3>
+        <p>DHC’s research and development labs in Japan were determined to maximize the benefits of conventional collagen. They developed and patented Dipeptide-8, a smaller skin-firming collagen molecule that instantly absorbs to deliver maximum hydration.</p>
       </div>
       <img src="./images/scm-beaker-r.png" alt="">
-      <img src="./images/scm-microscope.png" alt="">
-    </section>
-    <section class="molecules">
-      <div class="drops">
-        <img src="./images/scm-molecules.png" alt="">
-      </div>
+      <h4>Supported by</h4>
       <div class="chemical">
-        <h2>Dipeptide-8</h2>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="chemical">
-        <h2>Trehalse</h2>
-        <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h2>Trehalose</h2>
+        <p>Promoting moisture retention, trehalose helps desert plants survive long periods without water.</p>
       </div>
       <div class="chemical">
         <h2>Glycerin</h2>
-        <p>Excepteur sint occaecat cupidatat non proident.</p>
+        <p>A humectant known to prevent moisture loss.</p>
+      </div>
+    </section>
+    <section class="molecules">
+      <div class="title">
+        <h2>Unlock the Power of Super Collagen Mist</h2>
+        <button>Shop Now</button>
+      </div>
+      <div class="microscope">
+        <img src="./images/dhc-microscope.png" alt="">
+      </div>
+      <div class="traits">
+        <div class="trait">
+          <h3>Hydrate</h3>
+          <p>Boost your morning regimen with a quick spritz before toner to enjoy skin firming benefits.</p>
+        </div>
+        <div class="trait">
+          <h3>Set</h3>
+          <p>Complete your look with this finishing touch.</p>
+        </div>
+        <div class="trait">
+          <h3>Refresh</h3>
+          <p>Carry with you to revive your skin anytime, anywhere.</p>
+        </div>
+      </div>
+      <div class="drops">
+        <img src="./images/scm-molecules.png" alt="">
       </div>
     </section>
     <section class="video-carousel">
       <div class="video">
-        <h4>Video</h4>
+        <h4>Video Headline</h4>
       </div>
       <div class="carousel">
         <h4>Carousel</h4>
@@ -58,9 +77,9 @@
     </section>
     <section class="products">
       <div class="info">
-        <h3>Add a boost of collagen</h3>
-        <p>Ut enim ad minim veniam quis nostrud.</p>
-        <button>Shop</button>
+        <h2>Deliver Collagen to Your Skin</h2>
+        <p>Learn more about this essential skin-firming ingredient.</p>
+        <p>Explore ></p>
       </div>
       <div class="products-img">
         <img src="./images/scm-products.png" alt="">
@@ -68,9 +87,9 @@
     </section>
   </div> <!-- content wrapper -->
 
-  <!-- <script type="text/javascript" src="./lib/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="./lib/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="./lib/jquery-migrate-3.0.1.js"></script>
   <script type="text/javascript" src="./slick/slick.min.js"></script>
-  <script type="text/javascript" src="./src/js/scm-slick.js"></script> -->
+  <script type="text/javascript" src="./src/js/scm-slick.js"></script>
 </body>
 </html>
