1st draft complete

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Super Collagen Mist</title>
   <link rel="stylesheet" href="./ae-css/8213.css">
   <link rel="stylesheet" href="./ae-css/styles-l.css">
+  <link rel="stylesheet" type="text/css" media="all" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./dest/css/styles.css">
   <link rel="stylesheet" href="./slick/slick.css"/>
   <!-- <link rel="stylesheet" href="./slick/slick-theme.css"/> -->
@@ -16,32 +17,45 @@
         <img src="./images/super-collagen-mist.jpg" alt="">
       </div>
       <div class="info">
-        <h1>Super Collagen Mist</h1>
-        <p>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your makeup with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</p>
-        <button>Shop Now</button>
+        <div class="info-text">
+          <h1>Super Collagen Mist</h1>
+          <p>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your makeup with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</p>
+          <button>Shop Now</button>
+        </div>
+        <!-- <div class="moleculePattern">
+          <img src="./images/molecule-pattern.svg" alt="">
+        </div> -->
       </div>
-      <div class="moleculePattern">
-        <img src="./images/molecule-pattern.svg" alt="">
+    </section>
+    <section class="science">
+      <div class="supportImg">
+        <div class="supportImg-l">
+          <img src="./images/scm-beakers-l.png" alt="">
+        </div>
+      </div>
+      <div class="chemicals">
+        <div class="placard">
+          <h2>Dipeptide-8</h2>
+          <div class="placardLine"></div>
+          <p>DHC’s research and development labs in Japan were determined to maximize the benefits of conventional collagen. They developed and patented Dipeptide-8, a smaller skin-firming collagen molecule that instantly absorbs to deliver maximum hydration.</p>
+        </div>
+        <h6>Supported by</h6>
+        <div class="chemical">
+          <h3>Trehalose</h3>
+          <p>Promoting moisture retention, trehalose helps desert plants survive long periods without water.</p>
+        </div>
+        <div class="chemical">
+          <h3>Glycerin</h3>
+          <p>A humectant known to prevent moisture loss.</p>
+        </div>
+      </div>
+      <div class="supportImg">
+        <div class="supportImg-r">
+          <img src="./images/scm-beaker-r.png" alt="">
+        </div>
       </div>
     </section>
     <section class="story">
-      <img src="./images/scm-beakers-l.png" alt="">
-      <div class="placard">
-        <h3>Dipeptide-8</h3>
-        <p>DHC’s research and development labs in Japan were determined to maximize the benefits of conventional collagen. They developed and patented Dipeptide-8, a smaller skin-firming collagen molecule that instantly absorbs to deliver maximum hydration.</p>
-      </div>
-      <img src="./images/scm-beaker-r.png" alt="">
-      <h4>Supported by</h4>
-      <div class="chemical">
-        <h2>Trehalose</h2>
-        <p>Promoting moisture retention, trehalose helps desert plants survive long periods without water.</p>
-      </div>
-      <div class="chemical">
-        <h2>Glycerin</h2>
-        <p>A humectant known to prevent moisture loss.</p>
-      </div>
-    </section>
-    <section class="molecules">
       <div class="title">
         <h2>Unlock the Power of Super Collagen Mist</h2>
         <button>Shop Now</button>
@@ -62,6 +76,7 @@
           <h3>Refresh</h3>
           <p>Carry with you to revive your skin anytime, anywhere.</p>
         </div>
+        <div class="dropsLine"></div>
       </div>
       <div class="drops">
         <img src="./images/scm-molecules.png" alt="">
@@ -69,20 +84,18 @@
     </section>
     <section class="video-carousel">
       <div class="video">
-        <h4>Video Headline</h4>
+        <h4><span><i class="fa fa-play-circle-o" aria-hidden="true"></i></span>Video Headline</h4>
       </div>
       <div class="carousel">
-        <h4>Carousel</h4>
+        <h2>Explore the Power of Collagen</h2>
       </div>
     </section>
     <section class="products">
       <div class="info">
         <h2>Deliver Collagen to Your Skin</h2>
+        <div class="productsLine"></div>
         <p>Learn more about this essential skin-firming ingredient.</p>
-        <p>Explore ></p>
-      </div>
-      <div class="products-img">
-        <img src="./images/scm-products.png" alt="">
+        <p class="cta">Explore ></p>
       </div>
     </section>
   </div> <!-- content wrapper -->
