--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="./ae-css/styles-l.css">
   <link rel="stylesheet" type="text/css" media="all" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./dest/css/styles.css">
-  <link rel="stylesheet" href="./slick/slick.css"/>
-  <!-- <link rel="stylesheet" href="./slick/slick-theme.css"/> -->
+  <!-- <link rel="stylesheet" href="./slick/slick.css"/>
+  <link rel="stylesheet" href="./slick/slick-theme.css"/> -->
 </head>
 <body>
   <div class="content-wrapper">
@@ -78,14 +78,24 @@
         </div>
         <div class="dropsLine"></div>
       </div>
-      <div class="drops">
+      <div class="molecules">
         <img src="./images/scm-molecules.png" alt="">
       </div>
     </section>
     <section class="video-carousel">
-      <div class="video">
-        <h4><span><i class="fa fa-play-circle-o" aria-hidden="true"></i></span>Video Headline</h4>
-      </div>
+      <a id="openVideo" href="#">
+        <div class="video-thumbnail">
+          <h4><span><i class="fa fa-play-circle-o" aria-hidden="true"></i></span>Video Headline</h4>
+        </div>
+      </a>
+      <!-- <div id="video">
+        <div class="wistia_responsive_padding" style="padding: 56.25% 0 0 0; position: relative;">
+          <div class="wistia_responsive_wrapper" style="height: 100%; left: 0; position: absolute; top: 0; width: 100%;">
+            <iframe title="Wistia video player" src="https://fast.wistia.net/embed/iframe/ozmj3dq5tp?videoFoam=true" name="wistia_embed" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen="">
+            </iframe>
+          </div>
+        </div>
+      </div> -->
       <div class="carousel">
         <h2>Explore the Power of Collagen</h2>
       </div>
@@ -100,9 +110,11 @@
     </section>
   </div> <!-- content wrapper -->
 
-  <script type="text/javascript" src="./lib/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="./lib/jquery-migrate-3.0.1.js"></script>
+  <!-- <script type="text/javascript" src="./lib/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="./lib/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="./src/js/modal.js"></script>
+  <script type="text/javascript "src="https://fast.wistia.net/assets/external/E-v1.js"></script>
   <script type="text/javascript" src="./slick/slick.min.js"></script>
-  <script type="text/javascript" src="./src/js/scm-slick.js"></script>
+  <script type="text/javascript" src="./src/js/scm.js"></script> -->
 </body>
 </html>
