1st draft on Staging server

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
           <p>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your makeup with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</p>
           <button>Shop Now</button>
         </div>
-        <!-- <div class="moleculePattern">
-          <img src="./images/molecule-pattern.svg" alt="">
-        </div> -->
       </div>
     </section>
     <section class="science">
@@ -83,11 +80,16 @@
       </div>
     </section>
     <section class="video-carousel">
-      <a id="openVideo" href="#">
-        <div class="video-thumbnail">
-          <h4><span><i class="fa fa-play-circle-o" aria-hidden="true"></i></span>Video Headline</h4>
+      <div class="video-thumbnail">
+        <a id="openVideo" href="#">
+          <img src="./images/scm-video.jpg" alt="">
+        </a>
+        <div class="video-text">
+          <img class="video-button" src="./images/dhcVideo-play.svg" alt="">
+          <h4>Video Headline</h4>
         </div>
-      </a>
+      </div>
+
       <!-- <div id="video">
         <div class="wistia_responsive_padding" style="padding: 56.25% 0 0 0; position: relative;">
           <div class="wistia_responsive_wrapper" style="height: 100%; left: 0; position: absolute; top: 0; width: 100%;">
@@ -98,6 +100,9 @@
       </div> -->
       <div class="carousel">
         <h2>Explore the Power of Collagen</h2>
+        <!-- <div class="max-width-container">
+          {{widget type="Magento\CatalogWidget\Block\Product\ProductsList" show_pager="0" products_count="4" template="product/widget/content/grid.phtml" conditions_encoded="a:2:[i:1;a:4:[s:4:`type`;s:50:`Magento|CatalogWidget|Model|Rule|Condition|Combine`;s:10:`aggregator`;s:3:`all`;s:5:`value`;s:1:`1`;s:9:`new_child`;s:0:``;]s:4:`1--1`;a:4:[s:4:`type`;s:50:`Magento|CatalogWidget|Model|Rule|Condition|Product`;s:9:`attribute`;s:12:`category_ids`;s:8:`operator`;s:2:`==`;s:5:`value`;s:2:`63`;]]"}}
+        </div> -->
       </div>
     </section>
     <section class="products">
