mobile & desktop drafts complete

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <div class="info-text">
           <h1>Super Collagen Mist</h1>
           <h6>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your makeup with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</h6>
-          <button>Shop Now</button>
+          <div class="scm-cta">
+            <button>Shop Now</button>
+          </div>
+
         </div>
       </div>
     </section>
