begin tablet view; using tablet images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="hero">
         <picture>
           <source media="(max-width: 640px)" srcset="./images/super-collagen-mist-m.jpg">
+          <source media="(max-width: 1024px)" srcset="./images/super-collagen-mist-t.jpg">
           <img src="./images/super-collagen-mist.jpg" alt="">
         </picture>
         <div class="hero-text">
@@ -38,6 +39,7 @@
         <div class="supportImg-l">
           <picture>
             <source media="(max-width: 640px)" srcset="./images/scm-beakers-l-m.png">
+            <source media="(max-width: 1024px)" srcset="./images/scm-beakers-l-t.png">
             <img src="./images/scm-beakers-l.png" alt="">
           </picture>
         </div>
@@ -61,6 +63,7 @@
       <div class="supportImg-r">
         <picture>
           <source media="(max-width: 640px)" srcset="./images/scm-beaker-r-m.png">
+          <source media="(max-width: 1024px)" srcset="./images/scm-beaker-r-t.png">
           <img src="./images/scm-beaker-r.png" alt="">
         </picture>
       </div>
@@ -75,7 +78,10 @@
         <button>Shop Now</button>
       </div>
       <div class="microscope">
-        <img src="./images/dhc-microscope.png" alt="">
+        <picture>
+          <source media="(max-width: 1024px)" srcset="./images/dhc-microscope-t.png">
+          <img src="./images/dhc-microscope.png" alt="">
+        </picture>
       </div>
       <div class="traits">
         <div class="trait">
@@ -95,6 +101,7 @@
       <div class="molecules">
         <picture>
           <source media="(max-width: 640px)" srcset="./images/scm-molecules-m.png">
+          <source media="(max-width: 1024px)" srcset="./images/scm-molecules-t.png">
           <img src="./images/scm-molecules.png" alt="">
         </picture>
       </div>
