Tablet view draft done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="scm">
       <div class="hero">
         <picture>
-          <source media="(max-width: 640px)" srcset="./images/super-collagen-mist-m.jpg">
+          <source media="(max-width: 599px)" srcset="./images/super-collagen-mist-m.jpg">
           <source media="(max-width: 1024px)" srcset="./images/super-collagen-mist-t.jpg">
           <img src="./images/super-collagen-mist.jpg" alt="">
         </picture>
@@ -30,7 +30,6 @@
           <div class="scm-cta">
             <button>Shop Now</button>
           </div>
-
         </div>
       </div>
     </section>
@@ -38,7 +37,7 @@
       <!-- <div class="supportImg"> -->
         <div class="supportImg-l">
           <picture>
-            <source media="(max-width: 640px)" srcset="./images/scm-beakers-l-m.png">
+            <source media="(max-width: 599px)" srcset="./images/scm-beakers-l-m.png">
             <source media="(max-width: 1024px)" srcset="./images/scm-beakers-l-t.png">
             <img src="./images/scm-beakers-l.png" alt="">
           </picture>
@@ -62,7 +61,7 @@
       </div>
       <div class="supportImg-r">
         <picture>
-          <source media="(max-width: 640px)" srcset="./images/scm-beaker-r-m.png">
+          <source media="(max-width: 599px)" srcset="./images/scm-beaker-r-m.png">
           <source media="(max-width: 1024px)" srcset="./images/scm-beaker-r-t.png">
           <img src="./images/scm-beaker-r.png" alt="">
         </picture>
@@ -100,17 +99,17 @@
       </div>
       <div class="molecules">
         <picture>
-          <source media="(max-width: 640px)" srcset="./images/scm-molecules-m.png">
+          <source media="(max-width: 599px)" srcset="./images/scm-molecules-m.png">
           <source media="(max-width: 1024px)" srcset="./images/scm-molecules-t.png">
           <img src="./images/scm-molecules.png" alt="">
         </picture>
       </div>
-    </section>
+    </section> <!-- story -->
     <section class="video-carousel">
       <div class="video-thumbnail">
         <a id="openVideo" href="#">
           <picture>
-            <source media="(max-width: 640px)" srcset="./images/scm-video-m.jpg">
+            <source media="(max-width: 599px)" srcset="./images/scm-video-m.jpg">
             <img src="./images/scm-video.jpg" alt="">
           </picture>
 
