all 3 views basically done; moving to staging server

--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@
           <img src="./images/scm-beaker-r.png" alt="">
         </picture>
       </div>
-
-      <!-- <div class="supportImg">
-
-      </div> -->
     </section>
     <section class="story">
       <div class="title">
@@ -95,7 +91,7 @@
           <h3>Refresh</h3>
           <p>Carry with you to revive your skin anytime, anywhere.</p>
         </div>
-        <div class="dropsLine"></div>
+        <!-- <div class="dropsLine"></div> -->
       </div>
       <div class="molecules">
         <picture>
