Staging site updated!

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <section class="scm">
       <div class="hero">
         <picture>
-          <source media="(max-width: 599px)" srcset="./images/super-collagen-mist-m.jpg">
-          <source media="(max-width: 1024px)" srcset="./images/super-collagen-mist-t.jpg">
-          <img src="./images/super-collagen-mist.jpg" alt="">
+          <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/super-collagen-mist-m.jpg">
+          <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/super-collagen-mist-t.jpg">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/super-collagen-mist.jpg" alt="">
         </picture>
         <div class="hero-text">
           <h1>Super Collagen Mist</h1>
@@ -37,9 +37,9 @@
       <!-- <div class="supportImg"> -->
         <div class="supportImg-l">
           <picture>
-            <source media="(max-width: 599px)" srcset="./images/scm-beakers-l-m.png">
-            <source media="(max-width: 1024px)" srcset="./images/scm-beakers-l-t.png">
-            <img src="./images/scm-beakers-l.png" alt="">
+            <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beakers-l-m.png">
+            <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beakers-l-t.png">
+            <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beakers-l.png" alt="">
           </picture>
         </div>
       <!-- </div> -->
@@ -61,9 +61,9 @@
       </div>
       <div class="supportImg-r">
         <picture>
-          <source media="(max-width: 599px)" srcset="./images/scm-beaker-r-m.png">
-          <source media="(max-width: 1024px)" srcset="./images/scm-beaker-r-t.png">
-          <img src="./images/scm-beaker-r.png" alt="">
+          <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beaker-r-m.png">
+          <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beaker-r-t.png">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beaker-r.png" alt="">
         </picture>
       </div>
     </section>
@@ -74,8 +74,8 @@
       </div>
       <div class="microscope">
         <picture>
-          <source media="(max-width: 1024px)" srcset="./images/dhc-microscope-t.png">
-          <img src="./images/dhc-microscope.png" alt="">
+          <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhc-microscope-t.png">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhc-microscope.png" alt="">
         </picture>
       </div>
       <div class="traits">
@@ -95,9 +95,9 @@
       </div>
       <div class="molecules">
         <picture>
-          <source media="(max-width: 599px)" srcset="./images/scm-molecules-m.png">
-          <source media="(max-width: 1024px)" srcset="./images/scm-molecules-t.png">
-          <img src="./images/scm-molecules.png" alt="">
+          <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules-m.png">
+          <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules-t.png">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules.png" alt="">
         </picture>
       </div>
     </section> <!-- story -->
@@ -105,13 +105,13 @@
       <div class="video-thumbnail">
         <a id="openVideo" href="#">
           <picture>
-            <source media="(max-width: 599px)" srcset="./images/scm-video-m.jpg">
-            <img src="./images/scm-video.jpg" alt="">
+            <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video-m.jpg">
+            <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video.jpg" alt="">
           </picture>
 
         </a>
         <div class="video-text">
-          <img class="video-button" src="./images/dhcVideo-play.svg" alt="">
+          <img class="video-button" src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhcVideo-play.svg" alt="">
           <h4>Video Headline</h4>
         </div>
       </div>
@@ -139,7 +139,7 @@
         <p class="cta">Explore ></p>
       </div>
       <div class="productsImg-mobile">
-        <img src="./images/scm-products-m.png" alt="">
+        <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-products-m.png" alt="">
       </div>
     </section>
   </div> <!-- content wrapper -->
