Staging draft done; ready for Production

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h1>Super Collagen Mist</h1>
           <h6>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your makeup with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</h6>
           <div class="scm-cta">
-            <button>Shop Now</button>
+            <a href="https://www.dhccare.com/super-collagen-mist.html" role="button" aria-disabled="true" class="scm-btn">Shop Now</a>
           </div>
         </div>
       </div>
@@ -70,7 +70,7 @@
     <section class="story">
       <div class="title">
         <h2>Unlock the Power of Super Collagen Mist</h2>
-        <button>Shop Now</button>
+        <a href="https://www.dhccare.com/super-collagen-mist.html" role="button" aria-disabled="true" class="scm-btn">Shop Now</a>
       </div>
       <div class="microscope">
         <picture>
@@ -97,7 +97,7 @@
         <picture>
           <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules-m.png">
           <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules-t.png">
-          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules.png" alt="">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules2.png" alt="">
         </picture>
       </div>
     </section> <!-- story -->
@@ -108,11 +108,10 @@
             <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video-m.jpg">
             <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video.jpg" alt="">
           </picture>
-
         </a>
         <div class="video-text">
-          <img class="video-button" src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhcVideo-play.svg" alt="">
-          <h4>Video Headline</h4>
+          <img class="video-button" src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhcVideo-play.svg" alt="" />
+          <h4>How to Use</h4>
         </div>
       </div>
 
@@ -136,7 +135,7 @@
         <h2>Deliver Collagen to Your Skin</h2>
         <div class="productsLine"></div>
         <p>Learn more about this essential skin-firming ingredient.</p>
-        <p class="cta">Explore ></p>
+        <p class="cta"><a href="https://www.dhccare.com/blog/collagen-101">Explore &gt;</a></p>
       </div>
       <div class="productsImg-mobile">
         <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-products-m.png" alt="">
