localized for UK - worked on local ver of video modal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="info">
         <div class="info-text">
           <h1>Super Collagen Mist</h1>
-          <h6>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your makeup with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</h6>
+          <h6>Researched and developed by our scientists in Japan, Super Collagen Mist delivers the benefits of skin-firming collagen with the most precise and effective method yet: Dipeptide-8. Hydrate before you apply toner during your morning regimen. Set your make-up with its ultra-fine mist. Refresh throughout the day with a gentle, cooling spray.</h6>
           <div class="scm-cta">
             <a href="https://www.dhccare.com/super-collagen-mist.html" role="button" aria-disabled="true" class="scm-btn">Shop Now</a>
           </div>
@@ -49,7 +49,7 @@
       <div class="placard">
         <h2>Dipeptide-8</h2>
         <div class="placardLine"></div>
-        <p>DHC’s research and development labs in Japan were determined to maximize the benefits of conventional collagen. They developed and patented Dipeptide-8, a smaller skin-firming collagen molecule that instantly absorbs to deliver maximum hydration.</p>
+        <p>DHC’s research and development labs in Japan were determined to maximise the benefits of conventional collagen. They developed and patented Dipeptide-8, a smaller skin-firming collagen molecule that instantly absorbs to deliver maximum hydration.</p>
       </div>
       <div class="chemicals">
         <h6>Supported by</h6>
@@ -84,7 +84,7 @@
       <div class="traits">
         <div class="trait">
           <h3>Hydrate</h3>
-          <p>Boost your morning regimen with a quick spritz before toner to enjoy skin-firming benefits.</p>
+          <p>Boost your morning regimen with a quick spritz before toner to enjoy skin firming benefits.</p>
         </div>
         <div class="trait">
           <h3>Set</h3>
@@ -108,11 +108,11 @@
       <div class="video-thumbnail">
         <a id="openVideo" href="#">
           <picture>
-            <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video-m.jpg" /> <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video.jpg" alt="" />
+            <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video-m.jpg" /> <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-video.jpg" alt="click to watch a video showing how to use the Super Collagen Mist spray" />
           </picture>
         </a>
         <div class="video-text">
-          <img class="video-button" src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhcVideo-play.svg" alt="" />
+          <img class="video-button" src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhcVideo-play.svg" alt="Video play button" />
           <h4>How to Use</h4>
         </div>
       </div>
