--- a/index-uk.html
+++ b/index-uk.html
@@ -37,19 +37,17 @@
       </div>
     </section>
     <section class="science">
-      <!-- <div class="supportImg"> -->
         <div class="supportImg-l">
           <picture>
             <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beakers-l-m.png">
             <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beakers-l-t.png">
-            <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beakers-l.png" alt="">
+            <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beakers-l.png" alt="image of two beakers">
           </picture>
         </div>
-      <!-- </div> -->
       <div class="placard">
         <h2>Dipeptide-8</h2>
         <div class="placardLine"></div>
-        <p>DHC’s research and development labs in Japan were determined to maximise the benefits of conventional collagen. They developed and patented Dipeptide-8, a smaller skin-firming collagen molecule that instantly absorbs to deliver maximum hydration.</p>
+        <p>DHC&apos;s research and development labs in Japan were determined to maximise the benefits of conventional collagen. They developed and patented Dipeptide-8, a smaller skin-firming collagen molecule that instantly absorbs to deliver maximum hydration.</p>
       </div>
       <div class="chemicals">
         <h6>Supported by</h6>
@@ -66,7 +64,7 @@
         <picture>
           <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beaker-r-m.png">
           <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beaker-r-t.png">
-          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beaker-r.png" alt="">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-beaker-r.png" alt="beaker image">
         </picture>
       </div>
     </section>
@@ -78,7 +76,7 @@
       <div class="microscope">
         <picture>
           <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhc-microscope-t.png">
-          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhc-microscope.png" alt="">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/dhc-microscope.png" alt="image of a microscope">
         </picture>
       </div>
       <div class="traits">
@@ -94,13 +92,12 @@
           <h3>Refresh</h3>
           <p>Carry with you to revive your skin anytime, anywhere.</p>
         </div>
-        <!-- <div class="dropsLine"></div> -->
       </div>
       <div class="molecules">
         <picture>
           <source media="(max-width: 599px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules-m.png">
           <source media="(max-width: 1024px)" srcset="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules-t.png">
-          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules2.png" alt="">
+          <img src="https://www.dhccare.com/media/wysiwyg/content/product/scm/scm-molecules2.png" alt="molecular graphic">
         </picture>
       </div>
     </section> <!-- story -->
